# NodeRoute

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  NodeRoute_Backend_Frontend_Scan_Summary.docx  QA_Report_Inventory_PO_Workflow_2026-05-10.md  QA_Report_NodeRoute_2026-05-08.md  QA_Report_NodeRoute_2026-05-09.md  QA_Report_NodeRoute_2026-05-10.md  QA_WORKDAY_REPORT.md  README.md  SUPERADMIN_ACCESS_VERIFICATION_PROMPT.md  nixpacks.toml  package-lock.json  package.json  qa_audit_full.js  qa_check.js  qa_recon.js  railway.toml
.claude/: launch.json  settings.local.json
.claude_bak/: launch.json
NodeRoute.git/: config  secrets-to-remove.txt
NodeRoute_purge.git/: packed-refs
backend/: check_email.js  check_production_email.js  check_railway_vars.js  find_email_routes.js  grep_railway.js  instrument.js  package-lock.json  package.json  run_email_test.js  server.js  test_smtp_only.js
docs/: NodeRoute_Training_Guide.docx  automated-reorder-frontend-spec.md  credit-hold-frontend-spec.md  erp-feature-matrix.md
driver-app/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/: customer-portal.html  driver.html  index.html  landing.html  login.html  setup-password.html  track.html
frontend-v2/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend-v2/src-tauri/: Cargo.toml  tauri.conf.json
frontend-v2/src-tauri/capabilities/: default.json
frontend-v2/src-tauri/src/: lib.rs  main.rs
(+795 files in other folders)
