[package]
name = "noderoute"
version = "0.1.0"
description = "NodeRoute Desktop App"
authors = ["NodeRoute LLC"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "noderoute_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
